added last update info

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             <li class='no-dot'>
                 <p align='center'>by Giovanni Fusco © The Smith-Kettlewell Eye Research Institute, April 2020</p>
             </li>
+            <li class='no-dot'>
+                <p align='center'>
+                    last update: 11/21/2020
+                </p>
+            </li>
         </ul>
     </header>
 
