--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
             <li class='no-dot'>
                 <p align='center'>
-                    last update: 11/21/2020
+                    software updated on 11/21/2020
                 </p>
             </li>
         </ul>
