--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 
 <head>
+
     <script>
         var clicky_site_ids = clicky_site_ids || [];
         clicky_site_ids.push(101267620);
@@ -17,7 +18,8 @@
     <!-- <script src="https://d3js.org/d3-dsv.v1.min.js"></script> -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <!-- see changelog -->
-
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script src="./scripts/covid_utils.js"></script>
 
@@ -70,7 +72,7 @@
             </li>
             <li class='no-dot'>
                 <p align='center'>
-                    software updated on 01/08/2021
+                    last release on 01/10/2021
                 </p>
             </li>
         </ul>
@@ -79,26 +81,56 @@
 
     <nav>
         <ul class="breadcrumb justify-content-center">
-            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('Feedback', '', '')" title="jump to contacs">Contacts</a></li>
-            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('About', '', '')" title="jump to">About</a></li>
+
             <li class="breadcrumb-item"><a href="#" onClick="handle_selection('US', '', '')" title="jump to">USA</a></li>
             <li class="breadcrumb-item"><a href="#" onClick="handle_selection('IT', '', '')" title="jump to">Italy</a></li>
-            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('NZ', '', '')" title="jump to">New Zealand</a></li>
-            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('SE', '', '')" title="jump to">Sweden</a></li>
+            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('AT', '', '')" title="jump to">Austria</a></li>
+            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('AI', '', '')" title="jump to">UK</a></li>
             <li class="breadcrumb-item"><a href="#" onClick="handle_selection('CN', '', '')" title="jump to">China</a></li>
             <li class="breadcrumb-item"><a href="#" onClick="handle_selection('World', '', '')" title="jump to">All Countries</a></li>
             <li class="breadcrumb-item"><a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html" target="_blank">CDC Safety Guidelines</a></li>
+            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('Feedback', '', '')" title="jump to contacs">Contacts</a></li>
+            <li class="breadcrumb-item"><a href="#" onClick="handle_selection('About', '', '')" title="jump to">About</a></li>
         </ul>
 
-        <div align='right'>
+
+        <div align="center">
             <form name="country_form" id="country_form" onSubmit="return handle_selection()">
                 <label for="country_select"><!--Jump to Country:--></label>
                 <select id="country_select" aria-controls="country" name="country_select">
-          <option value="">Select a country&hellip;</option>
-      </select>
-                <input type="submit" value="Go">
+                        <option value="">Select a country&hellip;</option>
+                    </select>
+                <input type="submit" value="Go" style="margin-right: 20px; min-width: 100px;">
             </form>
         </div>
+        <div align="center">
+            <input type="checkbox" id="toggle-two" data-offstyle="outline-dark" data-onstyle="dark" style="margin-right: 20px;">
+            <script>
+                $(function() {
+                    $('#toggle-two').bootstrapToggle({
+                        on: 'Light Theme',
+                        off: 'Dark Theme'
+                    });
+                    $('#toggle-two').change(function() {
+                        // $('#console-event').html('Toggle: ' + $(this).prop('checked'))
+                        if ($('#toggle-two').prop('checked')) {
+                            document.body.style.background = "black";
+                            document.body.style.color = "white";
+                            $('.card').css('background-color', 'black');
+                            $('#brief_list').css('background-color', 'black');
+                        } else {
+                            document.body.style.background = "white";
+                            document.body.style.color = "black";
+                            $('.card').css('background-color', 'white');
+                            $('#brief_list').css('background-color', 'white');
+                        }
+                    })
+                })
+            </script>
+        </div>
+
+        <hr>
+
     </nav>
 
     <div class="container">
